--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -1,21 +1,22 @@
-version: 3
-
-automerge: true
-
-projects:
-  - name: main
-    dir: .
-    autoplan:
-      enabled: true
-      when_modified: ["*.hcl", "*.tf", "*.tfvars"]
-    workflow: terragrunt-workflow
-
 workflows:
   terragrunt-workflow:
     plan:
       steps:
-        - run: terragrunt plan --terragrunt-working-dir=.
+        - env:
+            name: TERRAGRUNT_TFPATH
+            command: 'echo "terraform${ATLANTIS_TERRAFORM_VERSION}"'
+        - env:
+            name: TF_IN_AUTOMATION
+            value: 'true'
+        - run:
+            command: terragrunt plan --terragrunt-working-dir=. 
     apply:
       steps:
-        - run: terragrunt apply --terragrunt-working-dir=. --auto-approve
-
+        - env:
+            name: TERRAGRUNT_TFPATH
+            command: 'echo "terraform${ATLANTIS_TERRAFORM_VERSION}"'
+        - env:
+            name: TF_IN_AUTOMATION
+            value: 'true'
+        - run:
+            command: terragrunt apply --terragrunt-working-dir=. --auto-approve
