--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -1,3 +1,13 @@
+version: 3 
+automerge: true
+projects:
+  - name: main
+    dir: .
+    autoplan:
+      enabled: true
+      when_modified: ["*.hcl", "*.tf", "*.tfvars"]
+    workflow: terragrunt-workflow
+
 workflows:
   terragrunt-workflow:
     plan:
